vcs/specs/parser/fail/statements/invalid_provide_context.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, provide, context, invalid, error
// @description: Test provide statement with invalid context expression
// @expected-error: E044

fn test() {
    provide 123 = value;
}
